force-pull.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: image-puller
spec:
  selector:
    matchLabels:
      name: image-puller
  template:
    metadata:
      labels:
        name: image-puller
    spec:
      containers:
      - name: puller
        image: alpine
        command: ["/bin/sh", "-c", "sleep infinity"]
        volumeMounts:
        - name: containerd-sock
          mountPath: /run/containerd/containerd.sock
      volumes:
      - name: containerd-sock
        hostPath:
          path: /run/containerd/containerd.sock
