ghost-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:5-alpine
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  selector:
    app: ghost
  ports:
    - port: 80
      targetPort: 2368
